--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ repositories {
 }
 
 dependencies {
+//    groupId:ArtifactId:version
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
