--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,8 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
+  datasource:
+    url: jdbc:h2:~/Documents/fiap/diapdatabase;DB_CLOSE_ON_EXIT=FALSE
+    username: fiap
+    password: fiap
